test/trivial/bradc/compilerDiagnostics.good
compilerDiagnostics.chpl:13: warning: 1-argument version of foo called with type: real
compilerDiagnostics.chpl:14: warning: 1-argument version of foo called with type: string
compilerDiagnostics.chpl:18: error: foo() called with non-matching types: int != real
